# rex-demo

./: .gitignore  Dockerfile  README.md  pyproject.toml  temp.py
app/: main.py
app/braidvisualiser/: __init__.py
app/polylatlib/: __init__.py  polylatlib.py  routes.py  utils.py
app/porfolio/: __init__.py  content_repository.py
app/porfolio/photography/: routes.py  utils.py
app/portfolio/: content_repository.py
app/software/: __init__.py
app/software/braidvisualiser/: routes.py
app/software/polylatlib/: models.py  utils.py
