[tool.poetry]
name = "rexdemo"
version = "0.1.0"
description = "API providing project demos."
authors = ["Rex Greenway <rexgreenway@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
polylatlib = "^1.0.2"
fastapi = {extras = ["standard"], version = "^0.114.2"}
braidvisualiser = "^0.2.0"
mypy = "^1.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
