[tool.poetry]
name = "rexdemo"
version = "0.1.0"
description = "API providing project demos."
authors = ["Rex Greenway <rexgreenway@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.114.2"}
google-cloud-storage = "^2.18.2"
cachetools = "^5.5.0"
google-auth = "^2.35.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
